--- a/style.css
+++ b/style.css
@@ -1,7 +1,3 @@
-button {
-    background-color: red;
-}
-
 #newMusic { /* set invisible */
     display: none;
 }
@@ -10,4 +6,8 @@ body {
     background-image: url("assets/1302540.png");
     background-repeat: no-repeat;
     background-size: cover;
+}
+
+h1 {
+    font-family: 'Harry Potter', sans-serif;
 }
