--- a/style.css
+++ b/style.css
@@ -1,3 +1,23 @@
+.scrollable-list {
+    max-height: 300px; /* Set a fixed height for the scrollable container */
+    overflow-y: auto; /* Enable vertical scrolling */
+}
+
+.accordion {
+    /* Make it take 1/3 of the page */
+    width: auto;
+}
+
+ul.checkbox-grid {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+}
+
+ul.list-group-item {
+    display: flex;
+    align-items: center;
+}
+
 #newMusic { /* set invisible */
     display: none;
 }
@@ -18,7 +38,7 @@ button[class~="audio"]{
 	height:15px;
 	width:15px;
 	cursor:pointer;
-	border:none;
+	border: 1px solid #000;
 	background:transparent;
 	background-size: 15px;
 }
