--- a/style.css
+++ b/style.css
@@ -33,6 +33,13 @@ body {
     min-height: 100vh;
 }
 
+@media only screen and (max-width: 600px) {
+    body {
+        background-image: url("assets/phone/dark.png");
+    }
+    
+}
+
 h1 {
     font-family: 'Harry Potter', sans-serif;
 }
