--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url('https://images.unsplash.com/photo-1543351611-58f69d7c1781?ixlib=rb-4.0.3&auto=format&fit=crop&w=1920&q=80');
+    background-image: url('./assets/1302540.png');
     font-family: 'Cinzel', serif;
     --cursor-url: url('assets/cursors/dumbledore/cursor.cur');
     --pointer-url: url('assets/cursors/dumbledore/pointer.cur');
