--- a/style.css
+++ b/style.css
@@ -204,4 +204,13 @@ button[class~="shuffle-active"] {
     #potionList .character-card span {
         font-size: 0.6rem;
     }
+    .tab-button {
+        width: 100%;
+        padding: 0.5rem;
+        font-size: 0.85rem;
+    }
+    .flex-wrap {
+        flex-direction: column;
+        align-items: center;
+    }
 }
