--- a/style.css
+++ b/style.css
@@ -142,7 +142,7 @@ button[class~="prev"] {
 }
 
 button[class~="mute"] {
-    background-image: url(https://img.icons8.com/android/24/FFFFFF/mute.png);
+    background-image: url(https://img.icons8.com/?size=100&id=102034&format=png&color=FFFFFF);
 }
 
 button[class~="unmute"] {
